// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Modal /> should display the modal on the provided container 1`] = `
<body>
  <div
    id="modal-container"
  >
    <div
      aria-describedby="modal-6-desc"
      aria-labelledby="modal-6-title"
      aria-modal="true"
      class="modal"
      role="dialog"
    >
      <div
        class="dialog"
      >
        <div
          class="modalContent"
        >
          <div
            class="wrapper"
          >
            <div>
              <div
                class="title"
                id="modal-6-title"
              >
                Did you know?
              </div>
              <div
                class="subtitle"
              />
            </div>
            <i
              class="material-icons icon"
            >
              close
            </i>
          </div>
          <div
            class="wrapper"
            id="modal-6-desc"
          >
            Ares is the Greek god of courage and war. He is one of the Twelve Olympians, and the son of Zeus and Hera
          </div>
        </div>
      </div>
    </div>
  </div>
  <div />
</body>
`;

exports[`<Modal /> should render an opened modal 1`] = `
<body>
  <div />
  <div
    aria-describedby="modal-1-desc"
    aria-labelledby="modal-1-title"
    aria-modal="true"
    class="modal"
    role="dialog"
  >
    <div
      class="dialog"
    >
      <div
        class="modalContent"
      >
        <div
          class="wrapper"
        >
          <div>
            <div
              class="title"
              id="modal-1-title"
            >
              Did you know?
            </div>
            <div
              class="subtitle"
            />
          </div>
          <i
            class="material-icons icon"
          >
            close
          </i>
        </div>
        <div
          class="wrapper"
          id="modal-1-desc"
        >
          Ares is the Greek god of courage and war. He is one of the Twelve Olympians, and the son of Zeus and Hera
        </div>
      </div>
    </div>
  </div>
</body>
`;
